combine `/search` into `/chats`
